#002 update name of practicab1 to index

--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <div class="container">
-        <div class="row ">
-            <div class="col-12 col-sm-6 col-md-4">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus ipsa adipisci voluptas voluptatibus sunt in libero veniam id dignissimos deserunt, sed numquam asperiores sit aperiam fugit porro cupiditate quisquam quam ea assumenda at quo qui. Molestiae, vel rerum. Quas, aut?
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Bootstrap JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <title>Pr&aacute;ctica B1</title>
+    </head>
+    
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col col-md-4 col-sm-6 col-xs-12 bg-danger">
+                    <h3>LogoEmpresa</h3>
+                </div>
+                <div class="col col-md-8 col-sm-6 col-xs-12 bg-warning">
+                    <h6>Men&uacute; de navegaci&oacute;n</h6>
+                </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 justify">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aliquid.
+            <!-- Agrega el slide en el centro -->
+            <div class="row row-cols align-items-center">
+                <div class="col col-md-12 col-sm-12 col-xs-12 slide bg-secondary"  style="padding:13%">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dicta dolore quam. Nesciunt iure quod vitae rem! Quaerat, saepe mollitia culpa, voluptatum debitis totam laborum, dolorem reiciendis similique fugit iure hic eveniet neque delectus consequuntur officiis eum? Impedit enim doloremque officiis aut molestias a rem explicabo quis porro, delectus fugit?</p>
+                </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-4 align-self-end">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla, praesentium!
+            <div class="row align-items-end">
+                <div class="col col-md-4 col-sm-6 col-xs-12 bg-success">
+                    <h1>Titulo 1</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi hic molestiae dolorem, itaque ab necessitatibus quia iure consectetur sed commodi!</p>
+                </div>
+                <div class="col col-md-4 col-sm-6 col-xs-12 bg-primary">
+                    <h1>Titulo 1</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi hic molestiae dolorem, itaque ab necessitatibus quia iure consectetur sed commodi!</p>
+                </div>
+                <div class="col col-md-4 col-sm-6 col-xs-12 bg-success">
+                    <h1>Titulo 1</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi hic molestiae dolorem, itaque ab necessitatibus quia iure consectetur sed commodi!</p>
+                </div>
             </div>
         </div>
-    </div>
-  </body>
+    </body>
 </html>
