--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
+<head>
+    <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -9,39 +9,59 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <!-- Bootstrap JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <title>Pr&aacute;ctica B1</title>
-    </head>
-    
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col col-md-4 col-sm-6 col-xs-12 bg-danger">
-                    <h3>LogoEmpresa</h3>
-                </div>
-                <div class="col col-md-8 col-sm-6 col-xs-12 bg-warning">
-                    <h6>Men&uacute; de navegaci&oacute;n</h6>
+    <title>Pr&aacute;cticas</title>
+</head>
+<body onload="getRepositorie()">
+    <div class="container">
+        <div class="row">
+            <h1 class="display-1">Prácticas</h1>
+            <h6 class="lead">Programación Móvil</h6>
+            <span class="badge rounded-pill bg-dark w-auto g-3"><h6>Descripci&oacute;n</h6></span>
+            <a class="badge rounded-pill bg-success w-auto mx-4 g-3 enlace"><h6>Enlace</h6></a>
+            <p id="desc" class="h6"></p>
+            <script type="text/javascript">
+                function getRepositorie() {
+                    var request = new XMLHttpRequest();
+                    request.open("GET", "https://api.github.com/users/guada8a/repos", true);
+                    request.onload = () => show_list(JSON.parse(request.responseText));
+                    console.log("consola" + request.responseText);
+                    request.send();
+                }
+
+                function show_list(user) {
+                    var repo = user.find(repo => repo.name == "PrograMovil");
+                    console.log(repo);
+                    console.log(repo.name);
+                    //Enlace nueva pestaña
+                    var enlace = document.getElementsByClassName("enlace")[0];
+                    enlace.setAttribute("href", repo.html_url);
+
+                    //Descripcion
+                    var desc = document.getElementById("desc");
+                    desc.appendChild(document.createTextNode(repo.description));
+
+                }
+            </script>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="titulo">
+                <div class="col col-md-12 user-list">
+                <h4 class="display-4 lead text-center">Prácticas</h4>
+                <div id="list">
+                    <div class="card">
+                        <script>
+                            for(let i=0; i<2; i++){
+                                document.write(`<div class='card-header'><h3 class='card-title'>Pr&aacute;ctica B${i+1}</h3></div><div class='card-body'><a href='' class='lead'>Ir a ==></a></div><br>`);
+                            }
+                        </script>
+                    </div>
                 </div>
             </div>
-            <!-- Agrega el slide en el centro -->
-            <div class="row row-cols align-items-center">
-                <div class="col col-md-12 col-sm-12 col-xs-12 slide bg-secondary"  style="padding:13%">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dicta dolore quam. Nesciunt iure quod vitae rem! Quaerat, saepe mollitia culpa, voluptatum debitis totam laborum, dolorem reiciendis similique fugit iure hic eveniet neque delectus consequuntur officiis eum? Impedit enim doloremque officiis aut molestias a rem explicabo quis porro, delectus fugit?</p>
-                </div>
-            </div>
-            <div class="row align-items-end">
-                <div class="col col-md-4 col-sm-6 col-xs-12 bg-success">
-                    <h1>Titulo 1</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi hic molestiae dolorem, itaque ab necessitatibus quia iure consectetur sed commodi!</p>
-                </div>
-                <div class="col col-md-4 col-sm-6 col-xs-12 bg-primary">
-                    <h1>Titulo 1</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi hic molestiae dolorem, itaque ab necessitatibus quia iure consectetur sed commodi!</p>
-                </div>
-                <div class="col col-md-4 col-sm-6 col-xs-12 bg-success">
-                    <h1>Titulo 1</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi hic molestiae dolorem, itaque ab necessitatibus quia iure consectetur sed commodi!</p>
-                </div>
+
             </div>
         </div>
-    </body>
+
+    </div>
+</body>
 </html>
