#004 - change image in pb2

--- a/p2/index.html
+++ b/p2/index.html
@@ -33,7 +33,7 @@
             <div class="col col-md-4 col-xs-12 mx-auto">
                 <h4 class="fs-4">Lorem, ipsum dolor.</h4>
                 <div class="card border-lime">
-                    <img src="https://us.123rf.com/450wm/dxinerz/dxinerz1512/dxinerz151200610/49253594-shopping-cart-basket-icon-vector-image-can-also-be-used-for-material-design-suitable-for-use-on.jpg?ver=6" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
+                    <img src="https://www.j-26.com/assets/resized/shopping-cart.png" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet delectus quidem, ducimus autem consectetur suscipit fugiat corporis accusantium quas quos itaque dolor atque iure facere optio, a, rem inventore nostrum!</p>
                     </div>
@@ -42,7 +42,7 @@
             <div class="col col-md-4 col-xs-12 mx-auto">
                 <h4 class="fs-4">Lorem, ipsum dolor.</h4>
                 <div class="card border-lime">
-                    <img src="https://us.123rf.com/450wm/dxinerz/dxinerz1512/dxinerz151200610/49253594-shopping-cart-basket-icon-vector-image-can-also-be-used-for-material-design-suitable-for-use-on.jpg?ver=6" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
+                    <img src="https://www.j-26.com/assets/resized/shopping-cart.png" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet delectus quidem, ducimus autem consectetur suscipit fugiat corporis accusantium quas quos itaque dolor atque iure facere optio, a, rem inventore nostrum!</p>
                     </div>
@@ -51,7 +51,7 @@
             <div class="col col-md-4 col-xs-12 mx-auto">
                 <h4 class="fs-4">Lorem, ipsum dolor.</h4>
                 <div class="card border-lime">
-                    <img src="https://us.123rf.com/450wm/dxinerz/dxinerz1512/dxinerz151200610/49253594-shopping-cart-basket-icon-vector-image-can-also-be-used-for-material-design-suitable-for-use-on.jpg?ver=6" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
+                    <img src="https://www.j-26.com/assets/resized/shopping-cart.png" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet delectus quidem, ducimus autem consectetur suscipit fugiat corporis accusantium quas quos itaque dolor atque iure facere optio, a, rem inventore nostrum!</p>
                     </div>
