--- a/p2/index.html
+++ b/p2/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col col-md-4 col-sm-12 col-xs-12">
+            <div class="col-md-4 col-sm-12 col-xs-12">
                 <h4 class="fs-4">Lorem, ipsum dolor.</h4>
                 <div class="card border-lime">
                     <img src="https://www.j-26.com/assets/resized/shopping-cart.png" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-md-4 col-sm-12 col-xs-12">
+            <div class="col-md-4 col-sm-12 col-xs-12">
                 <h4 class="fs-4">Lorem, ipsum dolor.</h4>
                 <div class="card border-lime">
                     <img src="https://www.j-26.com/assets/resized/shopping-cart.png" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col col-md-4 col-sm-12 col-xs-12">
+            <div class="col-md-4 col-sm-12 col-xs-12">
                 <h4 class="fs-4">Lorem, ipsum dolor.</h4>
                 <div class="card border-lime">
                     <img src="https://www.j-26.com/assets/resized/shopping-cart.png" class="card-img-top img-fluid" alt="..." style="height: 25vh;">
