--- a/p3/index.html
+++ b/p3/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./styles/style.css">
 	<title>Pr&aacute;ctica 3</title>
 </head>
-<main>
+<body>
 	<!-- Navbar -->
 	<nav class="navbar navbar-expand-md navbar-expand-xs navbar-dark bg-primary fixed-top">
 		<div class="container">
@@ -99,8 +99,8 @@
 			</button>
 		</div>
 	</div>
-	<!--Cards-->
 	<div class="container">
+		<!--Cards-->
 		<div class="row justify-content-center">
 			<div class="col col-md-10 text-center">
 				<h5 class="display-5 fw-light">Lorem, ipsum dolor.</h5>
@@ -109,7 +109,7 @@
 				</p>
 			</div>
 			<div class="d-flex justify-content-center flex-wrap">
-				<div class="card col-md-3 col-sm-12 col-xs-12 mx-sm-2 mx-md-2">
+				<div class="card col-md-3 col-sm-6 col-xs-12 mx-sm-2 mx-md-2 mb-4" style="width:18rem">
 					<img src="./src/2.jpg" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
@@ -117,7 +117,7 @@
 						<a href="#" class="btn btn-blue">Más información</a>
 					</div>
 				</div>
-				<div class="card col-md-3 col-sm-12 col-xs-12 mx-sm-2 mx-md-5">
+				<div class="card col-md-3 col-sm-6 col-xs-12 mx-sm-2 mx-md-2 mb-4" style="width:18rem">
 					<img src="./src/3.jpg" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
@@ -125,7 +125,7 @@
 						<a href="#" class="btn btn-blue">Más información</a>
 					</div>
 				</div>
-				<div class="card col-md-3 col-sm-12 col-xs-12 mx-sm2 mx-md-4">
+				<div class="card col-md-3 col-sm-12 col-xs-12 mx-sm-2 mx-md-4 mb-4" style="width:18rem">
 					<img src="./src/4.jpg" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
@@ -137,7 +137,7 @@
 		</div>
 	</div>
 	<!--Jumbotron-->
-	<div class="p-5 mt-4 mb-5 bg-body-tertiary container-fluid">
+	<div class="p-5 mt-4 mb-5 bg-body-secondary">
 		<div class="container">
 			<h3 class="display-3">Hello, World!</h3>
 			<p class="col-md-12 lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
@@ -164,11 +164,11 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
-								Accordion Item #1
+								Collapsible Group Item #1
 							</button>
 						</h2>
 						<div id="flush-collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFlushExample">
-							<div class="accordion-body">
+							<div class="accordion-body border">
 								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
 							</div>
 						</div>
@@ -176,11 +176,11 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-								Accordion Item #2
+								Collapsible Group Item #2
 							</button>
 						</h2>
 						<div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-							<div class="accordion-body">
+							<div class="accordion-body border">
 								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
 							</div>
 						</div>
@@ -188,11 +188,11 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-								Accordion Item #3
+								Collapsible Group Item #3
 							</button>
 						</h2>
 						<div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-							<div class="accordion-body">
+							<div class="accordion-body border">
 								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
 							</div>
 						</div>
@@ -202,19 +202,20 @@
 			<div class="col col-12 col-md-6 col-sm-12 col-xs-12">
 				<img class="card-img-top" src="./src/2.jpg">
 				<ul class="list-group">
-					<li class="list-group-item active" aria-current="true">Cras justo odio</li>
-					<li class="list-group-item">Dapibus ac facilisis in</li>
-					<li class="list-group-item">Morbi leo risus</li>
-					<li class="list-group-item">Porta ac consectetur ac</li>
-					<li class="list-group-item">Vestonulum at eros</li>
+					<li class="list-group-item active border border-secondary-subtle" aria-current="true">Cras justo odio</li>
+					<li class="list-group-item border">Dapibus ac facilisis in</li>
+					<li class="list-group-item border">Morbi leo risus</li>
+					<li class="list-group-item border">Porta ac consectetur ac</li>
+					<li class="list-group-item border">Vestonulum at eros</li>
 				</ul>
 			</div>
 		</div>
 	</div>
+	<!--Footer-->
 	<footer class="d-flex flex-wrap py-3 border-top bg-dark">
 		<div class="container col col-md-12 col-xs-12 text-center">
 			<span class="mb-3 mb-md-0 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Anirni non esse ab architecto. Recusandae maiores, voluptas accusamus veritatis beatae assumenda veniam fugit esse sed voluptate totam iure! Fuga, dolores quisquam.</span>
 		</div>
 	</footer>
-</main>
+</body>
 </html>
